tests/golden/fixtures/syntax-invalid-double-colon/expected.err
Error: undefined symbol 'RIA::op'
   ╭─[ tests/golden/fixtures/syntax-invalid-double-colon/input.k65:4:9 ]
   │
 4 │     sta RIA::op         // HALT CPU
   │         ───┬───  
   │            ╰───── symbol 'RIA::op' referenced here
───╯
